04-Feb-2012 Removed EnvironmentPaths function from Opus.Core.ITool, and added it to it's own interface, Opus.Core.IToolEnvironmentPaths, as the Paths function. Only tools that need to extend the PATH environment need to implement that interface now.

04-Feb-2012 Removed RequiredEnvironmentVariables property from Opus.Core.ITool, and added it to it's own interface, Opus.Core.IToolRequiredEnvironmentVariables, as the VariableNames property. Only tools that need environment variables need to implement that interface now.

02-Feb-2012 Improved ToString() implementation for DependencyNode.

02-Feb-2012 Bug fix to the dependency graph generation, caused by nested dependencies to the same module, resulting in empty collections of dependency nodes.

30-Jan-2012 Removed redundant Thread from Opus.Core.BuildAgent, since the threadpool is used.

29-Jan-2012 Opus.Core.File.SetRelativePath now takes a module's proxy path into account.

29-Jan-2012 While generating the dependent list of packages for compilation, ensure that only those valid for the current platform are considered.

29-Jan-2012 Adding SymLink module types to the FileUtilities package. This supports soft links to files and directories. Native build support is provided. A test package 'SymLinks-dev' is provided to test the support.

28-Jan-2012 Opus.Core.DirectoryCollection implementation simplified. Consistency with FileCollections allow using Include and Exclude methods. Opus.Core.PackageAndDirectoryPath is now redundant and has been removed.

28-Jan-2012 Handle the case of cloning a Opus.Core.ReferenceTypeOption that has null as it's value.

28-Jan-2012 Project Guids in .vcprojs/.vcxprojs/.csprojs are now deterministic after regenerating the solution. These are based upon the paths of the project files.

28-Jan-2012 Optimization to writing .vcprojs, while refactoring paths for OutDir and IntDir macros.
